--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
 
     <table id='countryResults' style="position:absolute; top:10px; left:10px;">
       <tbody>
-        <tr><td class="name-1">CANDIDATE 1</td><td class="name-1">RESULTS 1</td><td class="name-2">CANDIDATE 2</td><td class="name-2">RESULTS 2</td><th>WINNER</th><th>Name</th></tr>
+        <tr><td class="name-1">CANDIDATE #1</td><td class="name-1">RESULTS 1</td><td class="name-2">CANDIDATE 2</td><td class="name-2">RESULTS 2</td><th>WINNER</th><th>Name</th></tr>
       </tbody>
     </table>
 
