--- a/Index.html
+++ b/Index.html
@@ -26,8 +26,8 @@
         <tr><th>STATE NAME</th><th>ABBREVIATION</th></tr>
       </theader>
       <tbody>
-        <tr><td class="name-1">CANDIDATE 1</td><td class="name-1">RESULTS 1</td></tr>
-        <tr><td class="name-2">CANDIDATE 2</td><td class="name-2">RESULTS 2</td></tr>
+        <tr><td class="name-1">CANDIDATE #1</td><td class="name-1">RESULTS 1</td></tr>
+        <tr><td class="name-2">CANDIDATE #2</td><td class="name-2">RESULTS 2</td></tr>
         <tr><td class="winner">WINNER:</td><td class="winner">Winner Name</td></tr>
       </tbody>
     </table>
