--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
   </div>
   <br clear="all">
   <footer>
-    <p>&copy; Ismel 2020  <span>//</span>  HTML5 Map Created By: <a href="http://dougx.net/map/usmap.html" target="_blank">DougX.net</a></p>
+    <p>&copy; Ismel 2020  </a></p>
   </footer>
 
   <script type="text/javascript" src="script.js"></script>
