--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 
     <table id='stateResults' style="position:absolute; bottom:10px; right:10px;">
       <theader>
-        <tr><th>STATE NAME</th><th>ABBREVIATION</th></tr>
+        <tr><th>STATE Name</th><th>ABBREVIATION</th></tr>
       </theader>
       <tbody>
         <tr><td class="name-1">CANDIDATE #1</td><td class="name-1">RESULTS 1</td></tr>
