--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>U.S. ELECTION MAP</title>
+  <title>U.S. ELECTION MAP 2020</title>
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
