--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body onload="onLoad();" >
 <div class="page">
   <header>
-    <h1>U.S. ELECTION Map</h1>
+    <h1>U.S. ELECTION MAP</h1>
   </header>
 
   <div class="map-container">
