--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body onload="onLoad();" >
 <div class="page">
   <header>
-    <h1>U.S. ELECTION MAP</h1>
+    <h1>U.S. ELECTION Map</h1> 
   </header>
 
   <div class="map-container">
@@ -25,10 +25,7 @@
       <theader>
         <tr><th>STATE NAME</th><th>ABBREVIATION</th></tr>
       </theader>
-      <tbody>
-        <tr><td class="name-1">CANDIDATE #1</td><td class="name-1">RESULTS 1</td></tr>
-        <tr><td class="name-2">CANDIDATE #2</td><td class="name-2">RESULTS 2</td></tr>
-        <tr><td class="winner">WINNER:</td><td class="winner">Winner Name</td></tr>
+          <td class="winner">WINNER:</td><td class="winner">Winner Name</td></tr>
       </tbody>
     </table>
 
